pom文件新添加ipaas-common的依赖

--- a/PaaS-SDK-CCS-base/build.gradle
+++ b/PaaS-SDK-CCS-base/build.gradle
@@ -17,6 +17,12 @@ publishing {
                             delegate.artifactId("ipaas-zookeeper-utility")
                             delegate.version("0.1-SNAPSHOT")
                         }
+                        //com.ai:ipaas-common:0.1-SNAPSHOT
+                        delegate.dependency {
+                            delegate.groupId("com.ai")
+                            delegate.artifactId("ipaas-common")
+                            delegate.version("0.1-SNAPSHOT")
+                        }
                     }
                 }
             }
