--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,1 @@
-include "PaaS-Zookeeper-Utility","PaaS-SDK-CCS-base"
-include 'PaaS-SDK-CCS-IC-Auth','PaaS-SDK-CCS-EX-Auth'
+include "iPaas-Config-Inner-SDK","iPaas-Config-SDK","iPaas-Zookeeper-Utility"
