--- a/iPaas-Zookeeper-Utility/src/main/resources/com/ai/paas/ipaas/ccs/ipaas-config.properties
+++ b/iPaas-Zookeeper-Utility/src/main/resources/com/ai/paas/ipaas/ccs/ipaas-config.properties
@@ -6,7 +6,7 @@ com.ai.paas.ipaas.config.username_null=The Config username should not be null!
 com.ai.paas.ipaas.config.passwd_null=The Config password should not be null!
 com.ai.paas.ipaas.config.resource_client_failed=Get config client resource failed
 com.ai.paas.ipaas.config.user_auth_failed = {0} auth failed
-
+com.ai.paas.ipaas.config.serviceid_is_null = Service id is null!
 #########################
 # zookeeper error
 #########################
