--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,13 @@ allprojects{
 
     ext {
         //moduleName="ipaas-config-sdk";
-        moduleVersion="1.2.2-SNAPSHOT"
+        moduleVersion="0.3-SNAPSHOT"
         publishUserName = "devadm"
         publishUserPassword = "Devadm@1212"
         //publishURL="http://10.1.228.199:18081/nexus/content/repositories/releases/"
-        publishURL="http://10.1.228.199:18081/nexus/content/repositories/snapshots/"
-        builtBy="gradle 2.1"
+        publishSnapShotsURL="http://10.1.228.199:18081/nexus/content/repositories/snapshots/"
+		publishReleaseURL="http://10.1.228.199:18081/nexus/content/repositories/releases/"
+	    builtBy="gradle 2.1"
     }
 
     compileJava.dependsOn clean
@@ -30,7 +31,7 @@ subprojects{
     }
 
     dependencies{
-        compile 'com.ai:ipaas-common:0.1-SNAPSHOT'
+        compile 'com.ai:ipaas-common:0.3'
         testCompile(
                 "org.springframework:spring-test:4.1.5.RELEASE",
                 "junit:junit:4.11"
