--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ allprojects{
     apply plugin: 'maven-publish'
 
     ext {
-        //moduleName="ipaas-config-sdk";
-        moduleVersion="0.3-SNAPSHOT"
+        moduleVersion="0.3";
+        //moduleVersion="0.3-SNAPSHOT"
         publishUserName = "devadm"
         publishUserPassword = "Devadm@1212"
         //publishURL="http://10.1.228.199:18081/nexus/content/repositories/releases/"
