--- a/sdk-ccs-srv/build.gradle
+++ b/sdk-ccs-srv/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile project(":iPaas-Zookeeper-Utility")
+    compile project(":sdk-ccs-base")
     compile 'com.ai:ipaas-uac:0.3'
 }
 
