--- a/sdk-ccs-srv/.project
+++ b/sdk-ccs-srv/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>iPaas-Config-SDK</name>
+	<name>sdk-ccs-srv</name>
 	<comment></comment>
 	<projects>
 	</projects>
