--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ allprojects{
 }
 
 subprojects{
-    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+    [compileJava, compileTestJava,javadoc]*.options*.encoding = 'UTF-8'
 
     repositories {
         maven{ url "http://10.1.228.199:18081/nexus/content/groups/public/"  }
@@ -62,7 +62,24 @@ project("sdk-ccs-inner"){
             attributes 'packageName': moduleName, 'Built-By': builtBy,'create-date': new Date().format('yyyy-MM-dd HH:mm:ss')
         }
     }
-
+task sourcesJar(type: Jar, dependsOn: classes) {
+		baseName moduleName
+	    version moduleVersion
+	    classifier = 'sources'
+	    from sourceSets.main.allSource
+	}
+	
+	task javadocJar(type: Jar, dependsOn: javadoc) {
+		baseName moduleName
+	    version moduleVersion
+	    classifier = 'javadoc'
+	    from javadoc.destinationDir
+	}
+	
+	artifacts {
+	    archives sourcesJar
+	    archives javadocJar
+	}
     publish.dependsOn build
 }
 
@@ -79,9 +96,26 @@ project("sdk-ccs-srv"){
             attributes 'packageName': moduleName, 'Built-By': builtBy,'create-date': new Date().format('yyyy-MM-dd HH:mm:ss')
         }
     }
-
-    publish.dependsOn build
-}
+	task sourcesJar(type: Jar, dependsOn: classes) {
+		baseName moduleName
+	    version moduleVersion
+	    classifier = 'sources'
+	    from sourceSets.main.allSource
+	}
+	
+	task javadocJar(type: Jar, dependsOn: javadoc) {
+		baseName moduleName
+	    version moduleVersion
+	    classifier = 'javadoc'
+	    from javadoc.destinationDir
+	}
+	
+	artifacts {
+	    archives sourcesJar
+	    archives javadocJar
+	}
+	    publish.dependsOn build
+	}
 
 project("sdk-ccs-base"){
     project.ext {
@@ -96,6 +130,23 @@ project("sdk-ccs-base"){
             attributes 'packageName': moduleName, 'Built-By': builtBy,'create-date': new Date().format('yyyy-MM-dd HH:mm:ss')
         }
     }
-
+	task sourcesJar(type: Jar, dependsOn: classes) {
+		baseName moduleName
+	    version moduleVersion
+	    classifier = 'sources'
+	    from sourceSets.main.allSource
+	}
+	
+	task javadocJar(type: Jar, dependsOn: javadoc) {
+		baseName moduleName
+	    version moduleVersion
+	    classifier = 'javadoc'
+	    from javadoc.destinationDir
+	}
+	
+	artifacts {
+	    archives sourcesJar
+	    archives javadocJar
+	}
     publish.dependsOn build
 }
