--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ allprojects{
     apply plugin: 'maven-publish'
 
     ext {
-		moduleVersion = version != "unspecified"?version:'0.3'
+		moduleVersion = version != "unspecified"?version:'0.3.1'
 		moduleMode = project.hasProperty('mode') ? project.getProperty('mode') : 'R'
 		if(moduleMode == 'S'){
 			moduleVersion = moduleVersion + "-SNAPSHOT";
@@ -45,6 +45,8 @@ subprojects{
         testCompile  ('org.apache.jmeter:ApacheJMeter_junit:2.13'){
             exclude group: 'commons-math3', module: 'commons-math3'
             exclude group: 'commons-pool2', module: 'commons-pool2'
+            exclude group: 'xerces', module: 'xercesImpl'
+       		exclude group: 'xerces', module: 'xerces'
         }
 
     }
