--- a/sdk-ccs-srv/build.gradle
+++ b/sdk-ccs-srv/build.gradle
@@ -6,40 +6,51 @@ dependencies {
 publishing {
     publications {
         mavenJar(MavenPublication) {
-	       	groupId group
-	        artifactId "${moduleName}"
-        	version moduleVersion
-            artifact  jar
-
-			artifact (sourcesJar) { classifier "sources" }
+        	groupId group
+        	artifactId "${moduleName}"
+            artifact sourcesJar
+            version moduleVersion
             pom.withXml {
-				//Creating additional node for dependencies
-				def dependenciesNode = asNode().appendNode('dependencies')
+                asNode().children().last() + {
+                    delegate.dependencies {
+                        delegate.dependency {
+                            delegate.groupId("com.ai")
+                            delegate.artifactId("ipaas-zookeeper-utility")
+                            delegate.version("1.0")
+                        }
 
-				//Defining configuration names from which dependencies will be taken (debugCompile or releaseCompile and compile)
-				def configurationNames = ['compile']
+                        delegate.dependency {
+                            delegate.groupId("com.ai")
+                            delegate.artifactId("ipaas-uac")
+                            delegate.version("1.0")
+                        }
+                    }
+                }
+            }
+        }
+            
+        publishing.publications.create("${moduleName}", MavenPublication) {
+            groupId group
+            artifactId moduleName
+            version moduleVersion
+            artifact  jar
+            pom.withXml {
+                asNode().children().last() + {
+                    delegate.dependencies {
+                        delegate.dependency {
+                            delegate.groupId("com.ai")
+                            delegate.artifactId("ipaas-zookeeper-utility")
+                            delegate.version("1.0")
+                        }
 
-				configurationNames.each { configurationName ->
-					configurations[configurationName].allDependencies.each {
-						if (it.group != null && it.name != null) {
-							def dependencyNode = dependenciesNode.appendNode('dependency')
-							dependencyNode.appendNode('groupId', it.group)
-							dependencyNode.appendNode('artifactId', it.name)
-							dependencyNode.appendNode('version', it.version)
-
-							//If there are any exclusions in dependency
-							if (it.excludeRules.size() > 0) {
-								def exclusionsNode = dependencyNode.appendNode('exclusions')
-								it.excludeRules.each { rule ->
-									def exclusionNode = exclusionsNode.appendNode('exclusion')
-									exclusionNode.appendNode('groupId', rule.group)
-									exclusionNode.appendNode('artifactId', rule.module)
-								}
-							}
-						}
-					}
-				}
-			}
+                        delegate.dependency {
+                            delegate.groupId("com.ai")
+                            delegate.artifactId("ipaas-uac")
+                            delegate.version("1.0")
+                        }
+                    }
+                }
+            }
         }
     }
     repositories {
